cli/tests/snapshots/cli__run_images@scale_xy1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/scale_xy1.gleam
---
<svg width="120.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <ellipse cx="30.0" cy="30.0" rx="30.0" ry="30.0" transform="rotate(0.0 30.0 30.0)" fill="rgba(0, 0, 255, 1.0)" />
    <ellipse cx="90.0" cy="30.0" rx="30.0" ry="30.0" transform="rotate(0.0 90.0 30.0)" fill="rgba(0, 0, 255, 1.0)" />
  </g>
</svg>
