cli/tests/snapshots/cli__run_images@triangle1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/triangle1.gleam
---
<svg width="40.0" height="34.64101615137754" xmlns="http://www.w3.org/2000/svg">
  <polygon points="20.0,0.0 40.0,34.64101615137754 0.0,34.64101615137754" fill="rgba(210, 180, 140, 1.0)" />
</svg>
